Fixes #704 - Obscured bottom items in maps and layers list on mobile

--- a/IsraelHiking.Web/sources/application/components/sidebar/sidebar.component.scss
+++ b/IsraelHiking.Web/sources/application/components/sidebar/sidebar.component.scss
@@ -14,7 +14,7 @@
     direction: ltr;
     padding-left: $app-left-buttons;
     background: mat-color($app-background, card);
-    z-index: 1010;
+    z-index: $app-left-z-index - 5;
 }
 
 
